# gha_testing

./: README.md  pyproject.toml
.github/workflows/: ci_lint.yml  ci_tests.yml
src/yowhatprj/: __main__.py
src/yowhatprj/whatwhat/: what.py
src/yowhatprj/yoyoyo/: yo.py
tests/: test_main.py  test_what_yo.py
