[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yowhatprj"
version = "1.0.0"
authors = [
  { name="devdevindev", email="devinwrx@gmail.com" },
]
description = "testing out gha and other things with python projects"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "httpx >= 0.27.0"
]

[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "ruff"
]

[project.scripts]
yowhatprj = "yowhatprj.__main__:main"

[project.urls]
Homepage = "https://github.com/theburningbush/gha_testing"
